cabal-version: >=1.8
Name:           TableAlgebra
synopsis:       Ferry Table Algebra
Category:       Database
Version:        2.0.0
Description:    The Ferry 2.0 Table Algebra library
                .
                The table algebra [2] is an intermediate language used by Ferry 2.0 [3] and DSH [4].
                It forms the input for the pathfinder [1] optimiser that can translate it into SQL.
                The library exposes a monadic interface to construct algebraic plans, it 
                automatically performs common sub-tree elimination so that the resulting plan
                is as small as possible and the optimiser can do it's work better. 
                .
                .
                 1. <http://www-db.informatik.uni-tuebingen.de/research/pathfinder>
                .
                 2. <http://dbworld.informatik.uni-tuebingen.de/projects/pathfinder/wiki/Logical_Algebra>
                .
                 3. <http://www-db.informatik.uni-tuebingen.de/research/ferry>
                .
                 4. <http://www-db.informatik.uni-tuebingen.de/files/publications/ferryhaskell.pdf>
License:        BSD3
License-file:   LICENSE
Author:		Jeroen Weijers <jeroen.weijers@uni-tuebingen.de>, Tom Schreiber <tom.schreiber@uni-tuebingen.de>, Alexander Ulrich <alexander.ulrich@uni-tuebingen.de>
Maintainer:	Alexander Ulrich <alexander.ulrich@uni-tuebingen.de>
Build-Type:     Simple

library
    buildable:        True
    build-depends:    base >= 4.2 && < 5,  
                      mtl >= 2.0.1.0, 
                      containers >= 0.3.0.0, 
                      template-haskell >= 2.4.0.0, 
                      pretty >= 1.0.1.1, 
                      fgl >= 5.4, 
                      transformers >= 0.2, 
                      parsec >= 3.1,
                      aeson >= 0.6,
                      ghc-prim >= 0.2,
                      bytestring >= 0.9,
                      errors >= 1.0.0,
                      dlist,
                      ansi-wl-pprint

    exposed-modules:  Database.Algebra.Dag
                      Database.Algebra.Dag.Builder
                      Database.Algebra.Dag.Common
                      Database.Algebra.Aux

                      Database.Algebra.Rewrite
                      Database.Algebra.Rewrite.Match
                      Database.Algebra.Rewrite.Traversal
                      Database.Algebra.Rewrite.Rule
                      Database.Algebra.Rewrite.Properties
                      Database.Algebra.Rewrite.PatternConstruction
                      Database.Algebra.Rewrite.DagRewrite

                      Database.Algebra.Pathfinder
                      Database.Algebra.Pathfinder.Render.Dot
                      Database.Algebra.Pathfinder.Render.JSON
                      Database.Algebra.Pathfinder.Data.Algebra

                      Database.Algebra.SQL.Util

                      Database.Algebra.VL.Data
                      Database.Algebra.VL.Render.Dot
                      Database.Algebra.VL.Render.JSON

                      Database.Algebra.X100.Normalize 
                      Database.Algebra.X100.Serialize
                      Database.Algebra.X100.JSON
                      Database.Algebra.X100.Render
                      Database.Algebra.X100.Render.Common
                      Database.Algebra.X100.Data
                      Database.Algebra.X100.Data.Create
                      Database.Algebra.X100.Properties
                      Database.Algebra.X100.Properties.AbstractDomains
                      Database.Algebra.X100.ExprUtils
                      Database.Algebra.X100.ProjectUtils
    hs-source-dirs:   src
    GHC-Options:       -Wall -fno-warn-orphans -fno-warn-type-defaults -fno-warn-unused-do-bind -auto-all
    other-modules:    Database.Algebra.Pathfinder.Monadic.Create
                      Database.Algebra.Pathfinder.Data.Create
                      Database.Algebra.SQL.Query
                      Database.Algebra.SQL.Query.Substitution
                      Database.Algebra.SQL.Tile
                      Database.Algebra.SQL.Tile.Flatten
                      Database.Algebra.SQL.Render
                      Database.Algebra.SQL.Render.Tile
                      Database.Algebra.SQL.Render.Query
                      Database.Algebra.SQL.Materialization.Graph
                      Database.Algebra.SQL.Materialization.Combined
                      Database.Algebra.X100.Render.Sharing
                      Database.Algebra.X100.Properties.Schema
                      Database.Algebra.X100.Properties.Card1
                      Database.Algebra.X100.Properties.Const
                      Database.Algebra.X100.Properties.Empty
                      Database.Algebra.X100.Properties.SideEffect
                      Database.Algebra.X100.Properties.ICols
                      Database.Algebra.X100.Properties.Key
                      Database.Algebra.X100.Properties.Domain
                      Database.Algebra.X100.Properties.Types
                      Database.Algebra.X100.Properties.BottomUp
                      Database.Algebra.X100.Properties.TopDown
                      Database.Algebra.X100.Render.Dot
                      Database.Algebra.X100.Render.X100Code
                      Database.Algebra.Impossible
                      Database.Algebra.Rewrite.PatternSyntax		      

executable x100dot
    Main-is: Database/Algebra/X100/Tools/DotGen.hs
    GHC-Options:       -Wall -fno-warn-orphans -fno-warn-type-defaults -fno-warn-unused-do-bind
    hs-source-dirs:   src
    build-depends:    base >= 4.2 && < 5, 
                      aeson >= 0.6, 
                      mtl >= 2.0.1.0, 
                      containers >= 0.3.0.0,
                      transformers,
                      parsec,
                      template-haskell >= 2.4.0.0, 
                      pretty >= 1.0.1.1, 
                      fgl, 
                      ghc-prim >= 0.2,
                      bytestring >= 0.9

executable vldot
    Main-is: Database/Algebra/VL/Tools/DotGen.hs
    GHC-Options:       -Wall -fno-warn-orphans -fno-warn-type-defaults -fno-warn-unused-do-bind
    hs-source-dirs:   src
    build-depends:    base >= 4.2 && < 5, 
                      aeson >= 0.6, 
                      mtl >= 2.0.1.0, 
                      containers >= 0.3.0.0, 
                      parsec,
                      transformers,
                      template-haskell >= 2.4.0.0, 
                      pretty >= 1.0.1.1, 
                      fgl, 
                      ghc-prim >= 0.2,
                      bytestring >= 0.9

executable tadot
    Main-is: Database/Algebra/Pathfinder/Tools/DotGen.hs
    GHC-Options:       -Wall -fno-warn-orphans -fno-warn-type-defaults -fno-warn-unused-do-bind
    hs-source-dirs:   src
    build-depends:    base >= 4.2 && < 5, 
                      aeson >= 0.6, 
                      HaXml >= 1.22, 
                      mtl >= 2.0.1.0, 
                      containers >= 0.3.0.0, 
                      parsec,
                      transformers,
                      template-haskell >= 2.4.0.0, 
                      pretty >= 1.0.1.1, 
                      fgl, 
                      ghc-prim >= 0.2,
                      bytestring >= 0.9

executable x100gen
    Main-is: Database/Algebra/X100/Tools/CodeGen.hs
    GHC-Options:       -Wall -fno-warn-orphans -fno-warn-type-defaults -fno-warn-unused-do-bind
    hs-source-dirs:   src
    build-depends:    base >= 4.2 && < 5, 
                      aeson >= 0.6, 
                      mtl >= 2.0.1.0, 
                      containers >= 0.3.0.0, 
                      parsec,
                      transformers,
                      template-haskell >= 2.4.0.0, 
                      pretty >= 1.0.1.1, 
                      fgl, 
                      ghc-prim >= 0.2,
                      bytestring >= 0.9

executable sqlcodegentest
    Main-is: Database/Algebra/SQL/Tools/Test.hs
    GHC-Options:       -Wall -fno-warn-orphans -fno-warn-type-defaults -fno-warn-unused-do-bind
    hs-source-dirs:   src
    build-depends:    base >= 4.2 && < 5,
                      aeson >= 0.6,
                      mtl >= 2.0.1.0,
                      containers >= 0.3.0.0,
                      parsec,
                      transformers,
                      pretty >= 1.0.1.1, 
                      fgl,
                      ghc-prim >= 0.2,
                      bytestring >= 0.9,
                      dlist,
                      ansi-wl-pprint,
                      process,
                      filepath

