cabal-version: >=1.8
Name:           TableAlgebra
synopsis:       Ferry Table Algebra
Category:       Database
Version:        2.0.0
Description:    The Ferry 2.0 Table Algebra library
                .
                The table algebra [2] is an intermediate language used by Ferry 2.0 [3] and DSH [4].
                It forms the input for the pathfinder [1] optimiser that can translate it into SQL.
                The library exposes a monadic interface to construct algebraic plans, it 
                automatically performs common sub-tree elimination so that the resulting plan
                is as small as possible and the optimiser can do it's work better. 
                .
                .
                 1. <http://www-db.informatik.uni-tuebingen.de/research/pathfinder>
                .
                 2. <http://dbworld.informatik.uni-tuebingen.de/projects/pathfinder/wiki/Logical_Algebra>
                .
                 3. <http://www-db.informatik.uni-tuebingen.de/research/ferry>
                .
                 4. <http://www-db.informatik.uni-tuebingen.de/files/publications/ferryhaskell.pdf>
License:        BSD3
License-file:   LICENSE
Author:		Jeroen Weijers <jeroen.weijers@uni-tuebingen.de>, Tom Schreiber <tom.schreiber@uni-tuebingen.de>, Alexander Ulrich <alexander.ulrich@uni-tuebingen.de>, Moritz Bruder <moritz.bruder@student.uni-tuebingen.de>
Maintainer:	Alexander Ulrich <alex@etc-network.de>
Build-Type:     Simple

library
    buildable:        True
    build-depends:    base               >= 4.7 && < 5,  
                      mtl                >= 2.1, 
                      containers         >= 0.5, 
                      template-haskell   >= 2.9, 
                      pretty             >= 1.1, 
                      fgl                >= 5.5, 
                      transformers       >= 0.7, 
                      parsec             >= 3.1,
                      ghc-prim           >= 0.3,
                      bytestring         >= 0.10,
                      errors             >= 1.0,
                      dlist              >= 0.7,
                      ansi-wl-pprint     >= 0.6,
                      multiset           >= 0.2,
                      semigroups         >= 0.16

    exposed-modules:  Database.Algebra.Dag
                      Database.Algebra.Dag.Build
                      Database.Algebra.Dag.Common
                      Database.Algebra.Aux

                      Database.Algebra.Rewrite
                      Database.Algebra.Rewrite.Match
                      Database.Algebra.Rewrite.Traversal
                      Database.Algebra.Rewrite.Rule
                      Database.Algebra.Rewrite.Properties
                      Database.Algebra.Rewrite.PatternConstruction
                      Database.Algebra.Rewrite.DagRewrite

                      Database.Algebra.Table.Render.Dot
                      Database.Algebra.Table.Render.JSON
                      Database.Algebra.Table.Lang
                      Database.Algebra.Table.Construct

                      Database.Algebra.SQL.Util
                      Database.Algebra.SQL.Compatibility
                      Database.Algebra.SQL.Materialization
                      Database.Algebra.SQL.Materialization.CTE
                      Database.Algebra.SQL.Materialization.Combined

                      Database.Algebra.X100.Normalize 
                      Database.Algebra.X100.Serialize
                      Database.Algebra.X100.JSON
                      Database.Algebra.X100.Render
                      Database.Algebra.X100.Render.Common
                      Database.Algebra.X100.Data
                      Database.Algebra.X100.Data.Create
                      Database.Algebra.X100.Properties
--                      Database.Algebra.X100.Properties.AbstractDomains
                      Database.Algebra.X100.ExprUtils
                      Database.Algebra.X100.ProjectUtils
    hs-source-dirs:   src
    GHC-Options:       -Wall -fno-warn-orphans -fno-warn-type-defaults -fno-warn-unused-do-bind -auto-all
    other-modules:    Database.Algebra.SQL.Query
                      Database.Algebra.SQL.Query.Substitution
                      Database.Algebra.SQL.Query.Util
                      Database.Algebra.SQL.Termination
                      Database.Algebra.SQL.Tile
                      Database.Algebra.SQL.Tile.Flatten
                      Database.Algebra.SQL.Render
                      Database.Algebra.SQL.Render.Tile
                      Database.Algebra.SQL.Render.Query
                      Database.Algebra.SQL.Materialization.Graph
                      Database.Algebra.SQL.Materialization.Util
                      Database.Algebra.SQL.Materialization.TemporaryTable
                      Database.Algebra.X100.Render.Sharing
                      Database.Algebra.X100.Properties.Schema
                      Database.Algebra.X100.Properties.Types
                      Database.Algebra.X100.Properties.BottomUp
                      Database.Algebra.X100.Render.Dot
                      Database.Algebra.X100.Render.X100Code
                      Database.Algebra.Impossible
                      Database.Algebra.Rewrite.PatternSyntax		      

executable x100dot
    Main-is: Database/Algebra/X100/Tools/DotGen.hs
    GHC-Options:       -Wall -fno-warn-orphans
    hs-source-dirs:   src
    build-depends:    base               >= 4.7 && < 5,  
                      mtl                >= 2.1, 
                      containers         >= 0.5, 
                      template-haskell   >= 2.9, 
                      pretty             >= 1.1, 
                      fgl                >= 5.5, 
                      transformers       >= 0.7, 
                      parsec             >= 3.1,
                      ghc-prim           >= 0.3,
                      bytestring         >= 0.10

executable tadot
    Main-is: Database/Algebra/Table/Tools/DotGen.hs
    GHC-Options:       -Wall -fno-warn-orphans
    hs-source-dirs:   src
    build-depends:    base               >= 4.7 && < 5,  
                      mtl                >= 2.1, 
                      containers         >= 0.5, 
                      template-haskell   >= 2.9, 
                      pretty             >= 1.1, 
                      fgl                >= 5.5, 
                      transformers       >= 0.7, 
                      parsec             >= 3.1,
                      ghc-prim           >= 0.3,
                      bytestring         >= 0.10,
                      semigroups         >= 0.16,
                      aeson              >= 0.8

executable x100gen
    Main-is: Database/Algebra/X100/Tools/CodeGen.hs
    GHC-Options:       -Wall -fno-warn-orphans
    hs-source-dirs:   src
    build-depends:    base               >= 4.7 && < 5,  
                      mtl                >= 2.1, 
                      containers         >= 0.5, 
                      template-haskell   >= 2.9, 
                      pretty             >= 1.1, 
                      fgl                >= 5.5, 
                      transformers       >= 0.7, 
                      parsec             >= 3.1,
                      ghc-prim           >= 0.3,
                      bytestring         >= 0.10,
                      errors             >= 1.0,
                      dlist              >= 0.7,
                      ansi-wl-pprint     >= 0.6,
                      multiset           >= 0.2,
                      semigroups         >= 0.16

executable sqlgen
    Main-is: Database/Algebra/SQL/Tools/Gen
    GHC-Options:       -Wall -fno-warn-orphans
    hs-source-dirs:   src
    build-depends:    base               >= 4.7 && < 5,  
                      mtl                >= 2.1, 
                      containers         >= 0.5, 
                      template-haskell   >= 2.9, 
                      pretty             >= 1.1, 
                      fgl                >= 5.5, 
                      filepath           >= 1.3,
                      process            >= 1.2,
                      transformers       >= 0.7, 
                      parsec             >= 3.1,
                      ghc-prim           >= 0.3,
                      bytestring         >= 0.10,
                      errors             >= 1.0,
                      dlist              >= 0.7,
                      ansi-wl-pprint     >= 0.6,
                      multiset           >= 0.2,
                      semigroups         >= 0.16
