cabal-version: >=1.2
Name:           Ferryc
Version:        0.1
Description:    The Ferry 2.0 compilers
License:             GPL
License-file:   LICENSE
Author:			Jeroen Weijers <jeroen.weijers@uni-tuebingen.de> Tom Schreiber <tom.schreiber@uni-tuebingen.de>
Maintainer:		Jeroen Weijers <jeroen.weijers@uni-tuebingen.de> Tom Schreiber <tom.schreiber@uni-tuebingen.de>
Build-Type:     Simple
executable ferryc
    build-depends:  base >= 4.2, HaXml >= 1.20.2, pretty >= 1.0.1.1, parsec == 2.1.0.1, HUnit == 1.2.2.1, filepath >= 1.1.0.3, mtl >= 1.1.0.2, containers >= 0.3.0.0, fgl >= 5.4.2.2, haskell98 >= 1.0.1.1
    main-is:        FerryC.hs
    hs-source-dirs: src
    other-modules:   Ferry.Common.GraphTools,
                     Ferry.Common.Render.Dot,
                     Ferry.Common.Render.Pretty,
                     Ferry.Compiler.Compile,
                     Ferry.Compiler.ExecuteStep,
                     Ferry.Compiler.Types,
                     Ferry.Compiler.Error.Error,
                     Ferry.Compiler.Stages.NormaliseStage,
                     Ferry.Compiler.Stages.ParseStage,
                     Ferry.Compiler.Stages.ReadStage,
                     Ferry.Compiler.Stages.ToCoreStage,
                     Ferry.Compiler.Stages.TypeInferStage,
                     Ferry.Core.Data.Core,
                     Ferry.Core.Render.Dot,
                     Ferry.Core.Render.Pretty,
                     Ferry.Front.Convert.FrontToCore,
                     Ferry.Front.Convert.Normalise,
                     Ferry.Front.Data.Base,
                     Ferry.Front.Data.Instances,
                     Ferry.Front.Data.Language,
                     Ferry.Front.Data.Meta,
                     Ferry.Front.Parser.Applicative,
                     Ferry.Front.Parser.Parser,
                     Ferry.Front.Parser.Scanner,
                     Ferry.Front.Render.Pretty,
                     Ferry.TypedCore.Convert.Specialize,
                     Ferry.TypedCore.Convert.Traverse
                     Ferry.TypedCore.Data.Base,
                     Ferry.TypedCore.Data.Instances,
                     Ferry.TypedCore.Data.Substitution,
                     Ferry.TypedCore.Data.Type,
                     Ferry.TypedCore.Data.TypeClasses,
                     Ferry.TypedCore.Data.TypedCore,
                     Ferry.TypedCore.Render.Dot,
                     Ferry.TypedCore.Render.Pretty,
                     Ferry.TypeSystem.AlgorithmW,
                     Ferry.TypeSystem.ContextReduction,
                     Ferry.TypeSystem.Prelude,
                     Ferry.TypedCore.Data.TypeFunction,
                     Ferry.TypeSystem.Types,
                     Ferry.TypeSystem.Unification
