cabal-version: >=1.2
Name:           Ferryc
Version:        0.1
Description:    The Ferry 2.0 compilers
License:             GPL
License-file:   LICENSE
Author:			Jeroen Weijers <jeroen.weijers@uni-tuebingen.de> Tom Schreiber <tom.schreiber@uni-tuebingen.de>
Maintainer:		Jeroen Weijers <jeroen.weijers@uni-tuebingen.de> Tom Schreiber <tom.schreiber@uni-tuebingen.de>
Build-Type:     Simple
executable ferryc
    build-depends:  base >= 4.2, HaXml >= 1.20.2, pretty >= 1.0.1.1, parsec == 2.1.0.1, HUnit == 1.2.2.1, filepath >= 1.1.0.3, mtl >= 1.1.0.2, containers >= 0.3.0.0, haskell98 >= 1.0.1.1
    main-is:        FerryC.hs
    hs-source-dirs: src
    other-modules:
library
    buildable:        True
    build-depends:    base >= 4.2, HaXml >= 1.20.2, pretty >= 1.0.1.1, parsec == 2.1.0.1, HUnit == 1.2.2.1, filepath >= 1.1.0.3, mtl >= 1.1.0.2, containers >= 0.3.0.0, haskell98 >= 1.0.1.1
    exposed-modules:  Ferry.Syntax 
                      Ferry.Compiler.Transform
    hs-source-dirs: src
    other-modules:

