cabal-version: >=1.8
Name:           Ferryc
Version:        0.4.5
Description:    The Ferry 2.0 compiler
                Compiler for the Ferry language
License:        BSD3
License-file:   LICENSE
Author:			Jeroen Weijers <jeroen.weijers@uni-tuebingen.de> Tom Schreiber <tom.schreiber@uni-tuebingen.de>
Maintainer:		Jeroen Weijers <jeroen.weijers@uni-tuebingen.de>
Build-Type:     Simple
executable ferryc
    build-depends:  FerryCore >= 0.4.5, filepath >= 1.1.0.4, base >= 4.2, HaXml >= 1.20.2, pretty >= 1.0.1.1, parsec >= 2.1.0.1, mtl >= 2.0.1.0, containers >= 0.3.0.0, haskell98 >= 1.0.1.1, template-haskell >= 2.4.0.0
    main-is:        FerryC.hs 
    hs-source-dirs: src
    GHC-Options:       -Wall -fno-warn-orphans -fno-warn-unused-do-bind -fno-warn-type-defaults
    other-modules:
        Ferry.Compiler.Compile
        Ferry.Compiler.Stages.NormaliseStage 
        Ferry.Compiler.Stages.ParseStage 
        Ferry.Compiler.Stages.ReadStage
        Ferry.Compiler.Stages.ToCoreStage 
        Ferry.Front.Convert.FrontToCore 
        Ferry.Front.Convert.Normalise 
        Ferry.Front.Data.Instances 
        Ferry.Front.Data.Language 
        Ferry.Front.Data.Meta 
        Ferry.Front.Parser.Applicative 
        Ferry.Front.Parser.Parser 
        Ferry.Front.Parser.Scanner 
        Ferry.Front.Render.Pretty
        Ferry.Impossible
    extra-source-files:
        documentation/SyntaxDoc.pdf