cabal-version: >=1.8
Name:           FerryTableAlgebra
Version:        0.0.2
Description:    The Ferry 2.0 Table Algebra library
License:             GPL
License-file:   LICENSE
Author:			Jeroen Weijers <jeroen.weijers@uni-tuebingen.de> Tom Schreiber <tom.schreiber@uni-tuebingen.de>
Maintainer:		Jeroen Weijers <jeroen.weijers@uni-tuebingen.de>
Build-Type:     Simple
library
    buildable:        True
    build-depends:    base >= 4.2, HaXml >= 1.20.2, mtl >= 1.1.0.2, containers >= 0.3.0.0, haskell98 >= 1.0.1.1, template-haskell >= 2.4.0.0, pretty >= 1.0.1
    exposed-modules:  Ferry.Algebra
    hs-source-dirs:   src
    extensions:       MonoLocalBinds
    GHC-Options:       -Wall -fno-warn-orphans -fno-warn-type-defaults -fno-warn-unused-do-bind 
    other-modules:
        Ferry.Algebra.Data.Algebra 
        Ferry.Algebra.Data.Create 
        Ferry.Algebra.Data.GraphBuilder 
        Ferry.Algebra.Render.XML 
        Ferry.Impossible 