cabal-version: >=1.8
Name:           FerryTableAlgebra
Version:        0.1.5
Description:    The Ferry 2.0 Table Algebra library
License:        BSD3
License-file:   LICENSE
Author:			Jeroen Weijers <jeroen.weijers@uni-tuebingen.de> Tom Schreiber <tom.schreiber@uni-tuebingen.de>
Maintainer:		Jeroen Weijers <jeroen.weijers@uni-tuebingen.de>
Build-Type:     Simple
library
    buildable:        True
    build-depends:    base >= 4.2, HaXml >= 1.20.2, mtl >= 2.0.1.0, containers >= 0.3.0.0, haskell98 >= 1.0.1.1, template-haskell >= 2.4.0.0, pretty >= 1.0.1.1
    exposed-modules:  Ferry.Algebra
    hs-source-dirs:   src
    GHC-Options:       -Wall -fno-warn-orphans -fno-warn-type-defaults -fno-warn-unused-do-bind 
    other-modules:
        Ferry.Algebra.Data.Algebra 
        Ferry.Algebra.Data.Create 
        Ferry.Algebra.Data.GraphBuilder 
        Ferry.Algebra.Render.XML 
        Ferry.Algebra.Render.XMLUtils
        Ferry.Impossible 