cabal-version: >=1.8
Name:           TableAlgebra2
synopsis:       Ferry Table Algebra
Category:       Database
Version:        0.0.0.1
Description:    The Ferry 2.0 Table Algebra library
                .
                The table algebra [2] is an intermediate language used by Ferry 2.0 [3] and DSH [4].
                It forms the input for the pathfinder [1] optimiser that can translate it into SQL.
                The library exposes a monadic interface to construct algebraic plans, it 
                automatically performs common sub-tree elimination so that the resulting plan
                is as small as possible and the optimiser can do it's work better. 
                XML rendering is present and needed for interfacing with DSH-Pathfinder, and 
                for debugging plans with the standalone Pathfinder.
                .
                .
                 1. <http://www-db.informatik.uni-tuebingen.de/research/pathfinder>
                .
                 2. <http://dbworld.informatik.uni-tuebingen.de/projects/pathfinder/wiki/Logical_Algebra>
                .
                 3. <http://www-db.informatik.uni-tuebingen.de/research/ferry>
                .
                 4. <http://www-db.informatik.uni-tuebingen.de/files/publications/ferryhaskell.pdf>
License:        BSD3
License-file:   LICENSE
Author:			Jeroen Weijers <jeroen.weijers@uni-tuebingen.de> Tom Schreiber <tom.schreiber@uni-tuebingen.de>
Maintainer:		Jeroen Weijers <jeroen.weijers@uni-tuebingen.de>
Build-Type:     Simple

library
    buildable:        True
    build-depends:    base >= 4.2 && < 5,  HaXml >= 1.22, mtl >= 2.0.1.0, containers >= 0.3.0.0, template-haskell >= 2.4.0.0, pretty >= 1.0.1.1, graphviz, fgl, text
    exposed-modules:  Database.Algebra.Pathfinder
                      Database.Algebra.Pathfinder.Render.XML
                      Database.Algebra.X100
                      Database.Algebra.Graph.GraphBuilder
                      Database.Algebra.Graph.Serialize
                      Database.Algebra.Impossible
    hs-source-dirs:   src
    GHC-Options:       -Wall -fno-warn-orphans -fno-warn-type-defaults -fno-warn-unused-do-bind 
    other-modules:    Database.Algebra.Pathfinder.Monadic.Create
                      Database.Algebra.Pathfinder.Data.Algebra
                      Database.Algebra.Pathfinder.Data.Create
                      Database.Algebra.Pathfinder.Render.XMLUtils
                      Database.Algebra.X100.Data.Algebra
                      Database.Algebra.X100.Data.Create
                      Database.Algebra.X100.Monadic.Create
                      Database.Algebra.X100.Render.Dot
                      Database.Algebra.X100.Render.X100Code
                      Database.Algebra.X100.Render.Serialize
                      Database.Algebra.X100.Render.Common
                      Database.Algebra.X100.Render.Sharing
                      Database.Algebra.X100.Properties.Schema
                      Database.Algebra.X100.Properties.BottomUp
executable dotgen
    Main-is: Database/Algebra/X100/Tools/DotGen.hs
    GHC-Options:       -Wall -fno-warn-orphans -fno-warn-type-defaults -fno-warn-unused-do-bind 
    hs-source-dirs:   src
    build-depends:    base >= 4.2 && < 5, haskell98, HaXml >= 1.22, mtl >= 2.0.1.0, containers >= 0.3.0.0, template-haskell >= 2.4.0.0, pretty >= 1.0.1.1, graphviz, fgl, text

executable codegen
    Main-is: Database/Algebra/X100/Tools/CodeGen.hs
    GHC-Options:       -Wall -fno-warn-orphans -fno-warn-type-defaults -fno-warn-unused-do-bind 
    hs-source-dirs:   src
    build-depends:    base >= 4.2 && < 5, haskell98, HaXml >= 1.22, mtl >= 2.0.1.0, containers >= 0.3.0.0, template-haskell >= 2.4.0.0, pretty >= 1.0.1.1, graphviz, fgl, text

executable sharingcodegen
    Main-is: Database/Algebra/X100/Tools/SharingCodeGen.hs
    GHC-Options:       -Wall -fno-warn-orphans -fno-warn-type-defaults -fno-warn-unused-do-bind 
    hs-source-dirs:   src
    build-depends:    base >= 4.2 && < 5, haskell98, HaXml >= 1.22, mtl >= 2.0.1.0, containers >= 0.3.0.0, template-haskell >= 2.4.0.0, pretty >= 1.0.1.1, graphviz, fgl, text
